src/objects/Membership_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                    <isActive>false</isActive>
                    <label>Practitioner</label>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                    <isActive>false</isActive>
                    <label>Volunteer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ET_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ET Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GiftAid_Acquisition_Method__c</fullName>
        <label>GiftAid Acquisition Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GiftAid_Processor__c</fullName>
        <label>GiftAid Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-GiftAid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GiftAid_Target__c</fullName>
        <label>GiftAid Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NCT Giftaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GiftAid_Type__c</fullName>
        <label>GiftAid Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>1st and 15th</fullName>
                </value>
                <value>
                    <fullName>99 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <label>Membership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>18 month membership</fullName>
                </value>
                <value>
                    <fullName>12 month membership</fullName>
                </value>
                <value>
                    <fullName>Reduced 12 month membership</fullName>
                </value>
                <value>
                    <fullName>4 year membership</fullName>
                </value>
                <value>
                    <fullName>10 year membership</fullName>
                </value>
                <value>
                    <fullName>Life Membership</fullName>
                </value>
                <value>
                    <fullName>Staff Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Installments__c</fullName>
        <label>No. of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/Debit Card</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>GiftAid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-BACS</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-WorldPay</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-GiftAid</fullName>
                    <isActive>false</isActive>
                    <label>PaymentHub-GiftAid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Target__c</fullName>
        <label>Payment Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NCT Membership Collections - S18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/Debit Card (£57)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£9.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£57)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit Card (£48)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£12 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£48)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit Card (£10)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£2.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£10)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit Card (£120)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£120)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit Card (£250)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£250)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit Card (£26)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£26)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit (£6.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Life Membership - Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recursive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recursive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply By</fullName>
                    <default>true</default>
                    <label>Multiply By</label>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Customer__c</fullName>
        <label>Target Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volunteer/Practitioner</fullName>
                </value>
                <value>
                    <fullName>Parent on benefits</fullName>
                </value>
                <value>
                    <fullName>Staff only</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Parent, Companion</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Membership Type</label>
    <pluralLabel>Membership Types</pluralLabel>
</CustomObject>